# docmesh-doc

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  prd.md  pyproject.toml  test.py
.devcontainer/: .env  .env.example  Dockerfile  config.yaml  devcontainer-lock.json  devcontainer.json  docker-compose.keycloak.yml  docker-compose.yml  init.sql
.github/workflows/: docker-image.yml  docker-publish.yml
.release/: .env  .env.example
alembic/: env.py
alembic/versions/: 3d4056eb02e4_init.py  d15bdc998e8e_init.py
docmesh_doc/: __main__.py  application.py  assembly.py  auth_adapter.py  dependencies.py  dms_runtime.py  document_http.py  errors.py  factory.py  main.py  router.py  schemas.py
docmesh_doc/core/: __init__.py  config.py  exceptions.py  logging.py  messaging.py  security.py
docmesh_doc/dependencies/: config.py  metadata.py  security.py  storage.py
docmesh_doc/models/: __init__.py  document.py  metadata.py
docmesh_doc/routes/: __init__.py  auth.py  documents.py  health.py  metadata.py
docmesh_doc/schemas/: __init__.py  document.py  health.py  user.py
docmesh_doc/services/: document.py  logging.py  metadata.py  security.py
docs/: api.md  architecture.md  auth.md  config.md  examples.md  messaging.md  prd.md  srs.md  test.md
docs/wiki/: API-Auth.md  API-Documents.md  API-Health.md  API-Metadata.md  Configuration.md  DataModel.md  Home.md  Migration.md  Overview.md  PRD.md  QuickStart.md
external_docs/: api.md  config.md  messaging.md
fastapi_template/: factory.py  main.py
fastapi_template/core/: __init__.py  logging.py
fastapi_template/dependencies/: config.py  security.py
fastapi_template/routes/: __init__.py  auth.py  health.py
fastapi_template/schemas/: __init__.py  token.py
fastapi_template/services/: logging.py  security.py
test_docmesh_doc/: support.py  test_api.py  test_application.py  test_delete_api.py  test_dms_runtime.py  test_document_http.py  test_documents_api.py  test_error_api.py  test_read_api.py  test_real_services_integration.py  test_upload_api.py
test_docmesh_doc/core/: test_security.py
test_docmesh_doc/dependencies/: test_security.py  test_storage.py
test_docmesh_doc/integration/: conftest.py  test_document_lifecycle.py
test_docmesh_doc/routes/: test_auth.py  test_auth_error_format.py  test_document_metadata.py  test_document_metadata_mock.py  test_documents.py  test_documents_mock.py  test_health.py
test_docmesh_doc/schemas/: test_exports.py
test_docmesh_doc/services/: test_document.py  test_metadata.py  (+1 more)
wiki/: SCHEMA.md  index.md  log.md
(+78 files in other folders)
