[project]
name = "docmesh-doc"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.fastapi]
entrypoint = "docmesh_doc.main:app"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.pytest.ini_options]
testpaths = ["test_docmesh_doc"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
anyio_mode = "auto"
markers = [
    "integration: tests that require real external services such as PostgreSQL and MinIO",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
